--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -93,7 +93,8 @@ aria-describedby="btnNavbarSearch" />
           <li class="breadcrumb-item"><a href="../dashboard/dashboard.html">TRANG CHỦ</a></li>
           <li class="breadcrumb-item active">PRODUCT</li>
         </ol>
-        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#createUserModal">
+
+        <button type="button" class="btn btn-secondary" onclick="window.location.href='../product/creatProduct.html'">
           Thêm sản phẩm
         </button>
         <div class="card mb-4">
@@ -281,49 +282,7 @@ aria-describedby="btnNavbarSearch" />
         </div>
       </div>
       <!-- Modal -->
-      <div class="modal fade" id="createUserModal" tabindex="-1" aria-labelledby="createUserModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="createUserModalLabel">Thêm sản phẩm</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form id="createUserForm" action="/your-server-endpoint" method="POST">
 
-                <div class="mb-3">
-                  <label for="email" class="form-label">Tên</label>
-                  <input type="text" class="form-control" id="email" name="email" required>
-                </div>
-
-                <div class="mb-3">
-                  <label for="username" class="form-label">Mô tả</label>
-                  <input type="text" class="form-control" id="username" name="username" required>
-                </div>
-
-                <div class="mb-3">
-                  <label for="price" class="form-label">Giá</label>
-                  <input type="text" class="form-control" id="price" name="price" required>
-                </div>
-                <div class="mb-3">
-                  <label for="stock" class="form-label">Tồn kho</label>
-                  <input type="text" class="form-control" id="stock" name="stock" required>
-                </div>
-                <div class="mb-3">
-                  <label for="image" class="form-label">Chọn ảnh</label>
-                  <input type="file" class="form-control" id="image" name="image" accept="image/*" required>
-                </div>
-                <div class="mb-3">
-                  <label for="category_id" class="form-label">Mã danh mục</label>
-                  <input type="text" class="form-control" id="category_id" name="category_id" required>
-                </div>
-
-                <button type="submit" class="btn btn-primary">Tạo mới</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!-- Toast thông báo thành công -->
       <div class="toast-container position-fixed top-0 end-0 p-3">
